Fixed issue on mobile

--- a/style/main.scss
+++ b/style/main.scss
@@ -25,19 +25,13 @@ $min-page-vertical: 533px;
     padding: 0;
 }
 
-html {
-    height: 100vh;
-    min-height: 430px;
-    width: 100vw;
-}
-
 body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     min-height: $min-page-vertical;
+    width: 100vw;
 
     background-image: url("../img/background.jpg");
     background-position: 50% 0;
